--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,78 @@ body {
   min-height: 100px;
   border: 1px solid black;
 }
+/* ---------------------------- */
+/* aggiunta css originale */
+
+.row {
+  /* width: 992px; */
+  /* margin-left: auto;
+  margin-right: auto; */
+  margin-top: 100px;
+  text-align: center;
+}
+
+/* BLOCCO LEZIONI */
+/* #lezioni .row>.left,
+#lezioni .row>.right {
+  width: 50%;
+  float: left;
+} */
+
+img {
+  /* per centrare orizzontalmente */
+  /* display: block; */
+  max-width: 100%;
+  height: auto;
+  /* margin-right: auto;
+  margin-left: auto; */
+}
+
+/* BLOCCO STEPS */
+/* #steps .row>.left,
+#steps .row>.central,
+#steps .row>.right {
+  float: left;
+  width: 33%;
+} */
+
+/* #steps {
+  text-align: center;
+} */
+
+/* BLOCCO PERCHE */
+/* #why {
+  text-align: center;
+} */
+
+#why .row>.first,
+#why .row>.second,
+#why .row>.third {
+  /* width: 100%; */
+  margin-top: 80px;
+}
+
+#why.row img {
+  background-color: #428bca;
+  border-radius: 50%;
+  padding: 30px
+}
+
+/* COMMON */
+/* .row::after {
+  content: '';
+  display: table;
+  clear: both;
+} */
+
+.grey {
+  background-color: #f9f9f9;
+}
+
+/* img {
+  height: 200px;
+} */
+
+/* .clear {
+  clear: both;
+} */
